# presence-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benches.yml  ci.yml  dependencies.yml  release.yml
src/: lib.rs  presence.rs  serde.rs
tests/: conversion_tests.rs  general_tests.rs  iterator_tests.rs  macro_tests.rs  query_tests.rs  serde_tests.rs  transformation_tests.rs
