[package]
name = "presence-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "A Rust library providing a tri-state type for representing value presence in schemas and data structures."
license = "MIT"
repository = "https://github.com/minikin/presence-rs"
homepage = "https://github.com/minikin/presence-rs"
keywords = ["nullable", "option", "undefined", "tri-state", "schema"]
categories = ["data-structures", "encoding", "rust-patterns"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
